--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,31 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .white-popup {position: relative; background: #FFF; padding: 20px; width: auto; max-width: 500px;margin: 20px auto; }
 .swiper-container {width: 600px; height: 300px;}
 
+#DB_navi24 *{margin:0;padding:0;list-style:none}
+#DB_navi24 img{border:0}
+#DB_navi24 a{text-decoration:none}
+
+#DB_navi24 {position:relative;font:12px '돋움';width:100%;}
+#DB_navi24 .DB_wrap{position:relative;width:1000px;margin:0 auto;/*비표준=>left:50%;margin-left:-500px*/;height:50px}
+#DB_navi24 .DB_wrap h1{margin:10px 185px 0 0;float:left;font-size:24px}
+#DB_navi24 .DB_wrap .DB_main{float:left;margin-top:15px}
+#DB_navi24 .DB_wrap .DB_main li{float:left;width:120px;}
+#DB_navi24 .DB_wrap .DB_main li a{display:block;width:100%;height:100%;}
+#DB_navi24 .DB_wrap .DB_main li.DB_select{}
+
+#DB_navi24 .DB_mask{position:absolute;width:100%;min-width:1000px;height:200px/*서브메뉴전체높이*/;overflow:hidden;display:none}
+#DB_navi24 .DB_mask .DB_move{position:relative;width:100%;background:url('img/bg.png')  repeat-x center bottom;height:160px;top:-162px/*위로 메뉴숨기기*/;border-bottom:2px solid #59afe4}
+#DB_navi24 .DB_mask .DB_move .DB_subSet{position:relative;width:1000px;margin:0 auto;/*비표준=>left:50%;margin-left:-500px*/;padding-top:20px;}
+#DB_navi24 .DB_mask .DB_move .DB_subSet ul{float:left;width:120px;}
+#DB_navi24 .DB_mask .DB_move .DB_subSet ul:first-child{margin-left:250px}/*비표준=> 첫번째 li에 클래스로 적용*/
+#DB_navi24 .DB_mask .DB_move .DB_subSet ul li{height:22px;border-left:1px solid #eeeeee;text-indent:5px}
+#DB_navi24 .DB_mask .DB_move .DB_subSet ul li a{display:block;width:90%;padding:2px;color:#888888;}
+#DB_navi24 .DB_mask .DB_move .DB_subSet ul li a:hover{color:#59afe4;font-weight:bold;letter-spacing:-1px;}
+#DB_navi24 .DB_mask .DB_move .DB_subSet ul li.DB_select a{color:#59afe4;font-weight:bold;letter-spacing:-1px;}
+
+#DB_navi24 .DB_mask .DB_move .DB_close{position:absolute;top:130px;right:10px;cursor:pointer;}
+
+
 .top_nav{}
 .top_nav .container{}
 
