--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .selectbox select {width: 100%;height: auto;line-height: normal;font-family: inherit;padding: 0 10px;border: 0;opacity: 0;filter:alpha(opacity=0);-webkit-appearance: none;-moz-appearance: none;appearance: none;}
 /* 셀렉트 박스 */
 
+  
 
 #warp .visual{position:relative;  min-width:1850px;  height:810px; background:#000;}
 #warp .visual .visual_img1{background: url("../images/index_slide1.png"); background-size: 100%; max-width:2000px; height:810px;}
@@ -78,12 +79,22 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 #warp .photo_list .container{}
 
 
-#warp .index_form{position:relative;  min-width:1850px;  height:530px; background:#373737;}
-#warp .index_form .container{}
+#warp .index_form{position:relative;  min-width:1850px;  height:530px; background:url("../images/index_form_bg.png") center 0;}
+#warp .index_form .container{position: relative; width:1250px;}
+.index_form_l{position:relative; display:inline-block; width: 422px;}
+.index_form_r{position:relative; display:inline-block; }
+.index_form_l_t1{font-size: 24px; color:#fff; font-weight: 500; padding-top:115px;}
+.index_form_l_t2{font-size: 50px; color:#fff; font-weight: 600; line-height:56px; padding-top:20px;}
+.index_form_l_t3{font-size: 16px; color:#fff; font-weight: 400; line-height:20px; padding-top:32px; padding-bottom:50px;}
+
 
 #warp .banner_slide{position:relative;  min-width:1850px;  height:215px;  }
-#warp .banner_slide .container{}
-
+#warp .banner_slide .container{position:relative; padding-top:64px;}
+#warp .banner_slide .container .slide_banner{z-index:2;  position: relative; margin:0 auto;  text-align:center; font-size:0;}
+#warp .banner_slide .container .slide_banner li{display:inline-block; margin-right:24px;}
+#warp .banner_slide .container .slide_banner_aroow{margin-top:-65px; z-index:1;}
+#warp .banner_slide .container .index_bn_left{position: absolute;  width: 25px; height: 48px;}
+#warp .banner_slide .container .index_bn_right{position: absolute;   width: 25px; height: 48px; right:0;}
 #warp .googlemaps{position:relative; height:400px;  min-width:1850px; }
 
 #warp .foot_link{position:relative; height:50px;  min-width:1850px;  background:#373737;}
