--- a/css/main.css
+++ b/css/main.css
@@ -95,9 +95,18 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .index_form_l_t2{font-size: 50px; color:#fff; font-weight: 600; line-height:56px; padding-top:20px;}
 .index_form_l_t3{font-size: 16px; color:#fff; font-weight: 400; line-height:20px; padding-top:32px; padding-bottom:50px;}
 .index_com_info_icon{position:relative; margin:0 auto; text-align:center; padding-top:30px; padding-left:80px;}
+.index_com_info_btn{text-align: center; margin: 0 auto; padding-top: 30px;}
 .icon1{background:url("../images/willpower.png") no-repeat;}
 
 .ico_gb{height:44px; padding-left:65px; font-size:14px; line-height:16px; margin-right:80px; padding-top:10px; display: inline-block;}
+
+.btn { display:block; width:200px; height:40px; line-height:40px; border:1px #3399dd solid;; margin:15px auto; background-color:#66aaff; text-align:center; cursor: pointer; color:#333; transition:all 0.9s, color 0.3; } .btn:hover{color:#fff;}
+.hover1:hover{ box-shadow:200px 0 0 0 rgba(0,0,0,0.5) inset; } 
+.hover2:hover{ box-shadow:-200px 0 0 0 rgba(0,0,0,0.5) inset; } 
+.hover3:hover{ box-shadow: 0 80px 0 0 rgba(0,0,0,0.25) inset, 0 -80px 0 0 rgba(0,0,0,0.25) inset; } 
+.hover4:hover{ box-shadow: 200px 0 0 0 rgba(0,0,0,0.25) inset, -200px 0 0 0 rgba(0,0,0,0.25) inset; }
+
+
 
 #warp .banner_slide{position:relative;  min-width:1850px;  height:215px;  }
 #warp .banner_slide .container{position:relative; padding-top:64px;}
