--- a/css/demo-page.css
+++ b/css/demo-page.css
@@ -118,9 +118,9 @@ p,
   padding: 1em;
   cursor: pointer;
   _background: #e1e1e1;
-  border:1px solid #000000;
+  _border:1px solid #000000;
   text-decoration: none;
-  color: #666;
+  color: #000000;
   /* Prevent highlight colour when element is tapped */
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 
