--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,52 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .selectbox select {width: 100%;height: auto;line-height: normal;font-family: inherit;padding: 0 10px;border: 0;opacity: 0;filter:alpha(opacity=0);-webkit-appearance: none;-moz-appearance: none;appearance: none;}
 /* 셀렉트 박스 */
 
+.darkbtn{border: 1px solid #000000;}
+.wwhitebtn{border: 1px solid #ffffff; color:#fff !important;}
+.top_title{font-size: 32px; color:#000000; font-weight: 600; padding-top:60px; padding-bottom:20px; text-align:center;}
+
+.scale {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transition: all 0.3s ease-in-out;   /* 부드러운 모션을 위해 추가*/
+  }
+  .scale:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+  }
+  .img {width:325px; height:280px; overflow:hidden }   /* 부모를 벗어나지 않고 내부 이미지만 확대 */
+    
+  .swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
 
 #warp .visual{position:relative;  min-width:1850px;  height:810px; background:#000;}
 #warp .visual .visual_img1{background: url("../images/index_slide1.png"); background-size: 100%; max-width:2000px; height:810px;}
@@ -73,13 +119,16 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 #warp .content_main{  min-width:1850px; }
 #warp .content_main .container{}
 
-
+#warp .top5_list{height:540px;}
+#warp .top5_list.container{position: relative; width:1250px; }
+#warp .photo_list{height:665px;}
+#warp .photo_list.container{position: relative; _width:1250px; }
 
 #warp .index_com_info{  min-width:1850px; height: 330px; background:url("../images/index_com_bg.png") center 0; }
 #warp .index_com_info .container{position: relative; width:1250px; }
-.index_com_info_t1{font-size: 34px; color:#000000; font-weight: 600; padding-top:48px; text-align:center;}
-.index_com_info_t2{font-size: 16px; color:#444444; font-weight: 500; line-height:24px; padding-top:20px; text-align:center;}
-.index_com_info_t3{font-size: 16px; color:#fff; font-weight: 400; line-height:20px; padding-top:32px; padding-bottom:50px;}
+#warp .index_com_info .container .index_com_info_t1{font-size: 34px; color:#000000; font-weight: 600; padding-top:48px; text-align:center;}
+#warp .index_com_info .container .index_com_info_t2{font-size: 16px; color:#444444; font-weight: 500; line-height:24px; padding-top:20px; text-align:center;}
+#warp .index_com_info .container .index_com_info_t3{font-size: 16px; color:#fff; font-weight: 400; line-height:20px; padding-top:32px; padding-bottom:50px;}
 
 
 
