--- a/css/main.css
+++ b/css/main.css
@@ -174,3 +174,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .foot_selectbox label {position: absolute;top: 1px;left: 5px; padding: 9px 50px 9px 14px;color: #999;z-index: -1;}
 .foot_selectbox select {width: 100%;height: auto;line-height: normal;font-family: inherit;padding: 0 10px;border: 0;opacity: 0;filter:alpha(opacity=0);-webkit-appearance: none;-moz-appearance: none;appearance: none;}
 /* 셀렉트 박스 */
+
+
+.swiper_position_b{width: 1720px; overflow: hidden; margin-left:70px;}
+.top_110{top:110px !important;}
