--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 #warp .visual .visual_img1{background: url("../images/index_slide1.png"); background-size: 100%; max-width:2000px; height:810px;}
 #warp .visual .container{}                  
 
-#warp .content_main{  min-width:1850px; }
+#warp .content_main{  min-width:1850px; height: 695px;}
 #warp .content_main .container{}
 
 #warp .top5_list{height:540px;}
@@ -109,9 +109,23 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 #warp .index_com_info .container .index_com_info_t2{font-size: 16px; color:#444444; font-weight: 500; line-height:24px; padding-top:20px; text-align:center;}
 #warp .index_com_info .container .index_com_info_t3{font-size: 16px; color:#fff; font-weight: 400; line-height:20px; padding-top:32px; padding-bottom:50px;}
 
+.rank_border{background:url("../images/trophy.png") no-repeat 164px 20px ;width:206px; height:259px; border:1px solid #ebebeb; padding:18px 0 15px 20px}
+.rank_title{font-size:34px; color:#d7d7d7; padding-top:0;}
+.rank_txt1{font-size:22px; color:#000; padding-top:16px;}
+.rank_txt2{font-size:30px; color:#ff0e26; padding-top:34px;}
+.rank_txt3{font-size:14px; color:#9a9a9a; padding-top:34px;}
+.rank_txt4{font-size:14px; color:#000; padding-top:0;}
+.txt_red{color:#ff0e26;}
+.rank_ul{}
+.rank_ul li{display:inline-block; margin-right:35px;}
+.rank_ul li:last-child {margin-right:0px;}
 
-.rank_title{font-size:14px; color:#000; padding-top:0;}
-.rank_txt1{font-size:14px; color:#000; padding-top:0;}
+#page1{text-align: center; padding-top:15px;}
+.switch_menu{text-align: center; cursor: default; padding-bottom:11px; border-bottom: 2px solid #e0e0e0; color: #000000; display:inline-block; padding-left:10px; padding-right:10px;}
+.switch_menu a{color: #000000; cursor: pointer; border-radius: 25px; padding:7px 20px;}
+.switch_menu a.selected{color: #fff; background: linear-gradient(-45deg, #500b28, #e21c34); box-shadow: .15em .15em .8em rgba(0,0,0,.4);}
+.sub_raking{padding-top:47px;}
+
 
 #warp .photo_list{position:relative;   min-width:1850px;  height:565px;  }
 #warp .photo_list .container{overflow: hidden;}
@@ -125,8 +139,10 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .index_form_l_t3{font-size: 16px; color:#fff; font-weight: 400; line-height:22px; padding-top:32px; padding-bottom:50px;}
 .index_com_info_icon{position:relative; margin:0 auto; text-align:center; padding-top:30px; padding-left:80px;}
 .index_com_info_btn{text-align: center; margin: 0 auto; padding-top: 30px;}
-.icon1{background:url("../images/willpower.png") no-repeat;}
-
+.icon1{background:url("../images/i_willpower.png") no-repeat;}
+.icon2{background:url("../images/i_statistics.png") no-repeat;}
+.icon3{background:url("../images/i_targeted.png") no-repeat;}
+.icon4{background:url("../images/i_trophy.png") no-repeat;}
 
 .submit_form_table{position: relative; _width:530px;}
 .submit_form_table tr{}
