--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,36 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .icon3{background:url("../images/i_targeted.png") no-repeat;}
 .icon4{background:url("../images/i_trophy.png") no-repeat;}
 
+.analy_txt1{font-size: 60px; color:#000000; font-weight: 600; padding-top:60px;}
+.analy_txt2{font-size: 16px; color:#000000; font-weight: 400; padding-top:40px;}
+.analy_txt3{font-size: 28px; color:#000000; font-weight: 600; padding-top:0px;}
+.analy_txt4{font-size: 16px; color:#444444; font-weight: 500; padding-top:10px;}
+.analy_txt5{font-size: 16px; color:#000000; font-weight: 400; padding-top:25px;}
+
+.analy_btn{padding-top:40px}
+
+.ana_info1{position: absolute;; margin:295px 0 0 795px;   background:#fff; box-shadow: 10px 10px 10px #f3f3f3; width: 420px; height: 335px; padding:40px 0 0 35px}
+.ana_history{background: linear-gradient(-45deg, #500b28, #e21c34); width: 418px; height: 273px; font-size:16px; line-height: 30px;; color:#fff; padding:45px;}
+.analy_info_ul{position: absolute; bottom:45px; _padding-top:70px}
+.analy_info_ul li{display:inline-block; border:1px solid #000;     border-radius: 25px; padding:10px 16px; margin-right:5px;}
+
+#warp .analy_list{position:relative;   min-width:1850px;  height:700px;  }
+#warp .analy_list .container{overflow: hidden; }
+.ana_slidebox{width:1600px;}
+.ana_photo{width: 1000px; height: 700px; position: absolute; }
+.ana_info{position: relative; text-align: right;}
+.index_analy1{background:url("../images/index_analy1.png") no-repeat;left:0;}
+
+
+.ana_table{position: relative; float:right; margin-top:40px; width:410px;}
+.ana_table tr{}
+.ana_table tr td{font-size:14px; line-height:18px; vertical-align: top;}
+.ana_table{ _width:840px;}
+
+
+.w840{width: 840px; float:right}
+
+
 .submit_form_table{position: relative; _width:530px;}
 .submit_form_table tr{}
 .submit_form_table tr td{font-size:14px; line-height:18px; vertical-align: top;}
