애널리스트 소개 부분

--- a/css/main.css
+++ b/css/main.css
@@ -151,18 +151,62 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .analy_txt5{font-size: 16px; color:#000000; font-weight: 400; padding-top:25px;}
 
 .analy_btn{padding-top:40px}
+.arr_left, .arr_right {position: relative;display: inline-block;}
+.arr_right span::after {
+    content: '';
+    width: 12px; /* 사이즈 */
+    height: 12px; /* 사이즈 */
+    border-top: 1px solid #121212; /* 선 두께 */
+    border-right: 1px solid #121212; /* 선 두께 */
+    display: inline-block;
+    transform: rotate(45deg); /* 각도 */
+    cursor: pointer;
+}
+.arr_left span::after {
+    content: '';
+    width: 12px; /* 사이즈 */
+    height: 12px; /* 사이즈 */
+    border-top: 1px solid #121212; /* 선 두께 */
+    border-right: 1px solid #121212; /* 선 두께 */
+    display: inline-block;
+    transform: rotate(225deg); /* 각도 */
+    cursor: pointer;
+}
+.swiper_number{display: inline-block;}
+.swiper-analy {position: relative;;}
 
-.ana_info1{position: absolute;; margin:295px 0 0 795px;   background:#fff; box-shadow: 10px 10px 10px #f3f3f3; width: 420px; height: 335px; padding:40px 0 0 35px}
-.ana_history{background: linear-gradient(-45deg, #500b28, #e21c34); width: 418px; height: 273px; font-size:16px; line-height: 30px;; color:#fff; padding:45px;}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+.ana_info1{text-align:left; position: absolute;; margin:295px 0 0 766px;   background:#fff; box-shadow: 10px 10px 10px #f3f3f3; width: 420px; height: 335px; padding:40px 0 0 35px}
+.ana_history{text-align:left;background: linear-gradient(-45deg, #500b28, #e21c34); width: 418px; height: 273px; font-size:16px; line-height: 30px;; color:#fff; padding:45px;}
 .analy_info_ul{position: absolute; bottom:45px; _padding-top:70px}
-.analy_info_ul li{display:inline-block; border:1px solid #000;     border-radius: 25px; padding:10px 16px; margin-right:5px;}
+.analy_info_ul li{display:inline-block; font-size:14px; font-weight: 500;; border:1px solid #000;     border-radius: 25px; padding:10px 16px; margin-right:5px;}
 
-#warp .analy_list{position:relative;   min-width:1850px;  height:700px;  }
-#warp .analy_list .container{overflow: hidden; }
+#warp .analy_list{position:relative;  min-width:1850px;  height:700px;  }
+#warp .analy_list .container{ width:100%; overflow: hidden; }
 .ana_slidebox{width:1600px;}
 .ana_photo{width: 1000px; height: 700px; position: absolute; }
 .ana_info{position: relative; text-align: right;}
-.index_analy1{background:url("../images/index_analy1.png") no-repeat;left:0;}
+
+.index_analy1{background:url("../images/index_analy1.png") no-repeat;left:0px;}
 
 
 .ana_table{position: relative; float:right; margin-top:40px; width:410px;}
@@ -170,9 +214,12 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .ana_table tr td{font-size:14px; line-height:18px; vertical-align: top;}
 .ana_table{ _width:840px;}
 
-
+.swiper-nav{float:right; padding-top:30px; }
+.swiper_number{font-size:16px; color:#000000; width:auto !important; line-height: 16px; padding:0 5px;}
 .w840{width: 840px; float:right}
-
+.w1600{width:1600px;}
+.w1700{width:1600px; margin-right: 100px;}
+.swiper-pos{float:right; z-index: 9; margin-right:5px;}
 
 .submit_form_table{position: relative; _width:530px;}
 .submit_form_table tr{}
